syntax = 'proto3';

package api;

option go_package = "cont/api";

message ContainerRequest {
  string name = 1;
  string hostname = 2;
  string workdir = 3;
  string cmd = 4;
  repeated string args = 8;
}

message ContainerResponse {
  bytes uuid = 1;
}

message Empty {
}

message Process {
  string id = 1;
  string cmd = 2;
  int64 pid = 3;
}

message ActiveProcesses {
  repeated Process processes = 1;
}

service Api {
  rpc Run(ContainerRequest) returns (ContainerResponse) {};
  rpc Ps(Empty) returns (ActiveProcesses) {};
}
